Added APIC support

--- a/vs/Kernel/kernel.vcxproj
+++ b/vs/Kernel/kernel.vcxproj
@@ -131,8 +131,13 @@
     <ClCompile Include="..\..\src\core_crt\string.c" />
     <ClCompile Include="..\..\src\core_crt\wchar.c" />
     <ClCompile Include="..\..\src\kernel\cpp_mem.cpp" />
-    <ClCompile Include="..\..\src\kernel\devices\acpi\ACPI.cpp" />
-    <ClCompile Include="..\..\src\kernel\devices\ConfigTables.cpp" />
+    <ClCompile Include="..\..\src\kernel\hal\devices\acpi\ACPI.cpp" />
+    <ClCompile Include="..\..\src\kernel\hal\devices\apic\APIC.cpp" />
+    <ClCompile Include="..\..\src\kernel\hal\devices\apic\IOAPIC.cpp" />
+    <ClCompile Include="..\..\src\kernel\hal\devices\apic\LocalAPIC.cpp" />
+    <ClCompile Include="..\..\src\kernel\hal\devices\ConfigTables.cpp" />
+    <ClCompile Include="..\..\src\kernel\hal\devices\CPU.cpp" />
+    <ClCompile Include="..\..\src\kernel\hal\devices\Device.cpp" />
     <ClCompile Include="..\..\src\Kernel\hal\HAL_x64.cpp" />
     <ClCompile Include="..\..\src\kernel\hal\x64\x64.cpp" />
     <ClCompile Include="..\..\src\kernel\io\LoadingScreen.cpp" />
@@ -157,9 +162,13 @@
     <ClInclude Include="..\..\src\gfx\Font.h" />
     <ClInclude Include="..\..\src\gfx\FrameBuffer.h" />
     <ClInclude Include="..\..\src\gfx\Types.h" />
-    <ClInclude Include="..\..\src\kernel\devices\acpi\ACPI.h" />
-    <ClInclude Include="..\..\src\kernel\devices\ConfigTables.h" />
-    <ClInclude Include="..\..\src\kernel\devices\LocalAPIC.h" />
+    <ClInclude Include="..\..\src\kernel\hal\devices\acpi\ACPI.h" />
+    <ClInclude Include="..\..\src\kernel\hal\devices\apic\APIC.h" />
+    <ClInclude Include="..\..\src\kernel\hal\devices\apic\IOAPIC.h" />
+    <ClInclude Include="..\..\src\kernel\hal\devices\apic\LocalAPIC.h" />
+    <ClInclude Include="..\..\src\kernel\hal\devices\ConfigTables.h" />
+    <ClInclude Include="..\..\src\kernel\hal\devices\CPU.h" />
+    <ClInclude Include="..\..\src\kernel\hal\devices\Device.h" />
     <ClInclude Include="..\..\src\Kernel\hal\HAL.h" />
     <ClInclude Include="..\..\src\Kernel\hal\Interrupt.h" />
     <ClInclude Include="..\..\src\kernel\hal\x64\ctrlregs.h" />
